# puppeteer

./: README.md  pyproject.toml
src/: agent.py  agent_prompt.py  main.py  martian.py
src/ai_runtime/: prompts.py  runtime.py
src/python_runtime/: probe.py  runtime.py
terminal/: README.md  app.py  editor_template.tcss  terminal.py  terminal_prompt.py  testing.py
terminal-input/: terminal.py
terminal/config/: logger.py
terminal/services/: ai_client.py  apply_change.py  context.py  indexer.py  parse.py  parser.py
